# src/apis/auth/authRouter.js
@@ -6,6 +6,7 @@ import passport from "passport";
 const routes = express.Router();
 
 routes.post("/register", asyncHandler(AuthController.register));
+routes.post("/verify-email/:token", asyncHandler(AuthController.verifyEmail));
 routes.post("/login", asyncHandler(AuthController.login));
 routes.post("/logout", asyncHandler(AuthController.logout));
 routes.post("/refresh-token", asyncHandler(AuthController.newAccessToken));
